// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test K8sDeleteStep should render edit view -with ManifestPaths selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="k8DeleteData_identifier"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                >
                  Test_A
                </span>
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                placeholder="pipeline.stepNamePlaceholder"
                type="text"
                value="Test A"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center;"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="12m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.type"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="k8DeleteData_spec.deleteResources.type"
          >
            pipelineSteps.deleteResourcesBy
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.resourceNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                auditTrail.resourceNameLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.manifestPathValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.manifestPathLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.releaseNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.releaseNameLabel
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sDeleteStep should render edit view -with ReleaseName selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="k8DeleteData_identifier"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                >
                  Test_A
                </span>
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                placeholder="pipeline.stepNamePlaceholder"
                type="text"
                value="Test A"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center;"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="12m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.type"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="k8DeleteData_spec.deleteResources.type"
          >
            pipelineSteps.deleteResourcesBy
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.resourceNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                auditTrail.resourceNameLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.manifestPathValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.manifestPathLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.releaseNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.releaseNameLabel
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--intent-warning StyledProps--padding-left-small StyledProps--font-align-center StyledProps--flex StyledProps--flex-justifyContent-flex-start"
      id="warning-deletenamespace"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--intent-danger StyledProps--margin-right-small"
        data-icon="warning-icon"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 32 32"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 28.988c-7.179 0-13-5.82-13-13s5.821-13 13-13c7.18 0 13 5.82 13 13s-5.82 13-13 13zm1.501-6.493a1.5 1.5 0 10-3 0 1.5 1.5 0 003 0zm-1.5-3.517a1 1 0 001-1V9.026a1 1 0 10-2 0v8.952a1 1 0 001 1z"
            fill="#FF7B26"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16 27.988c-6.627 0-12-5.373-12-12 0-6.628 5.373-12 12-12 6.628 0 12 5.372 12 12 0 6.627-5.372 12-12 12zm2.501-5.493a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zm-2.5-2.517a2 2 0 002-2V9.026a2 2 0 10-4 0v8.952a2 2 0 002 2zm-13-3.99c0 7.18 5.82 13 13 13s13-5.82 13-13-5.82-13-13-13-13 5.82-13 13zm13 5.007a1.5 1.5 0 110 3 1.5 1.5 0 010-3zm1-3.017a1 1 0 11-2 0V9.026a1 1 0 112 0v8.952z"
            fill="#FF7B26"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-message-warning"
      >
        pipelineSteps.deleteNamespaceWarning
      </p>
    </div>
  </div>
</div>
`;

exports[`Test K8sDeleteStep should render edit view -with ResourceName selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="k8DeleteData_identifier"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                >
                  Test_A
                </span>
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                placeholder="pipeline.stepNamePlaceholder"
                type="text"
                value="Test A"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center;"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="12m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.type"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="k8DeleteData_spec.deleteResources.type"
          >
            pipelineSteps.deleteResourcesBy
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.resourceNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                auditTrail.resourceNameLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.manifestPathValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.manifestPathLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.releaseNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.releaseNameLabel
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sDeleteStep should render edit view as new step 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="k8DeleteData_identifier"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                />
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                placeholder="pipeline.stepNamePlaceholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center;"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="10m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.type"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="k8DeleteData_spec.deleteResources.type"
          >
            pipelineSteps.deleteResourcesBy
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.resourceNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                auditTrail.resourceNameLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.manifestPathValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.manifestPathLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.releaseNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.releaseNameLabel
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sDeleteStep should render variable view 1`] = `
<div>
  <div
    class="variablesListTable"
  />
</div>
`;

exports[`Test K8sDeleteStep validate input set in deployment form - only timeout is runtime: K8 delete step error in deploymentform if timeout not present 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group bp3-intent-danger"
      >
        <label
          class="bp3-label"
          for="timeout"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepTestUtilForm_timeout"
          >
            pipelineSteps.timeoutLabel
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            style="flex-grow: 1;"
          >
            <div
              class="bp3-input-group bp3-fill"
            >
              <input
                class="bp3-input"
                name="timeout"
                placeholder="Enter w/d/h/m/s/ms"
                type="text"
                value=""
              />
            </div>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
          <div
            class="bp3-form-helper-text"
          >
            <div
              class="FormError--errorDiv"
              data-name="timeout"
            >
              <span
                class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                data-icon="circle-cross"
              >
                <svg
                  height="12"
                  viewBox="0 0 13 13"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="FormError--error"
              >
                validation.timeout10SecMinimum
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {
  "timeout": "validation.timeout10SecMinimum"
}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;
